letsencrypt: Add DirectAdmin DNS provider

--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -3,6 +3,7 @@ FROM $BUILD_FROM
 
 # setup base
 ARG CERTBOT_VERSION
+ARG CERTBOT_DNS_DIRECTADMIN_VERSION
 ARG CERTBOT_NETCUP_VERSION
 ARG CERTBOT_GANDI_VERSION
 ARG CERTBOT_DNS_TRANSIP_VERSION
@@ -22,6 +23,7 @@ RUN apk add --no-cache --update \
         certbot-dns-cloudflare==${CERTBOT_VERSION} \
         certbot-dns-cloudxns==${CERTBOT_VERSION} \
         certbot-dns-digitalocean==${CERTBOT_VERSION} \
+        certbot-dns-directadmin==${CERTBOT_DNS_DIRECTADMIN_VERSION} \
         certbot-dns-dnsimple==${CERTBOT_VERSION} \
         certbot-dns-dnsmadeeasy==${CERTBOT_VERSION} \
         certbot-dns-gehirn==${CERTBOT_VERSION} \
