zwave: Add instance config (#1380)

--- a/zwave/config.json
+++ b/zwave/config.json
@@ -15,7 +15,7 @@
   },
   "ports_description": {
     "1983/tcp": "ozw-admin port"
-  },  
+  },
   "services": ["mqtt:want"],
   "discovery": ["ozw"],
   "auto_uart": true,
@@ -29,7 +29,8 @@
   },
   "schema": {
     "device": "str",
-    "network_key": "password"
+    "network_key": "password",
+    "instance": "int(1,)"
   },
   "image": "homeassistant/{arch}-addon-zwave"
 }
