--- a/zwave/config.json
+++ b/zwave/config.json
@@ -1,20 +1,26 @@
 {
-  "name": "OpenZwave",
-  "version": "0.3.0",
+  "name": "OpenZWave",
+  "version": "0.4.0",
   "slug": "zwave",
   "description": "Control a ZWave network with Home Assistant",
   "arch": ["amd64", "i386", "armhf", "armv7", "aarch64"],
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/zwave",
+  "ingress": true,
+  "ingress_entry": "vnc_lite.html",
+  "panel_icon": "mdi:z-wave",
+  "panel_title": "OpenZWave",
   "startup": "services",
   "boot": "auto",
   "init": false,
   "stage": "experimental",
   "homeassistant": "0.110.0.dev",
   "ports": {
-    "1983/tcp": null
+    "1983/tcp": null,
+    "5900/tcp": null
   },
   "ports_description": {
-    "1983/tcp": "ozw-admin port"
+    "1983/tcp": "ozw-admin port",
+    "5900/tcp": "VNC port"
   },
   "services": ["mqtt:want"],
   "discovery": ["ozw"],
