--- a/deconz/config.json
+++ b/deconz/config.json
@@ -42,5 +42,5 @@
     "dbg_zcl": "int?",
     "dbg_zdp": "int?"
   },
-  "_image": "homeassistant/{arch}-addon-deconz"
+  "image": "homeassistant/{arch}-addon-deconz"
 }
