--- a/deconz/config.json
+++ b/deconz/config.json
@@ -29,6 +29,9 @@
   "apparmor": false,
   "privileged": ["SYS_MODULE", "SYS_RAWIO"],
   "devices": ["/dev/bus/usb:/dev/bus/usb:rwm", "/dev/mem:/dev/mem:rw"],
+  "snapshot_exclude": [
+    "/data/otau/*"
+  ],
   "options": {
     "device": null,
     "vnc_password": ""
