--- a/deconz/Dockerfile
+++ b/deconz/Dockerfile
@@ -68,7 +68,7 @@ RUN if [ "${BUILD_ARCH}" = "armhf" ]; \
         else \
             curl -q -L -o /deconz.deb http://deconz.dresden-elektronik.de/ubuntu/beta/deconz-${DECONZ_VERSION}-qt5.deb; \
         fi \
-    && dpkg -i /deconz.deb \
+    && dpkg --force-all -i /deconz.deb \
     && rm -f /deconz.deb \
     && chown root:root /usr/bin/deCONZ* \
     && sed -i 's/\/root/\/data/' /etc/passwd
