--- a/deconz/rootfs/etc/nginx/nginx.conf
+++ b/deconz/rootfs/etc/nginx/nginx.conf
@@ -43,6 +43,13 @@ http {
             proxy_set_header Connection $connection_upgrade;
         }
 
+        location /novnc {
+            proxy_pass http://127.0.0.1:5901;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+        }
+
         location / {
             proxy_pass http://127.0.0.1:40850;
             proxy_redirect default;
