--- a/deconz/rootfs/etc/nginx/nginx.conf
+++ b/deconz/rootfs/etc/nginx/nginx.conf
@@ -50,6 +50,10 @@ http {
             proxy_set_header Connection $connection_upgrade;
         }
 
+        location =/index.html {
+            root /usr/share/www/;
+        }
+
         location / {
             proxy_pass http://127.0.0.1:40850;
             proxy_redirect default;
