--- a/deconz/rootfs/etc/nginx/nginx.conf
+++ b/deconz/rootfs/etc/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
             proxy_set_header Connection $connection_upgrade;
         }
 
-        location =/index.html {
+        location =/ingress.html {
             root /usr/share/www/;
         }
 
