--- a/deconz/rootfs/etc/nginx/nginx.conf
+++ b/deconz/rootfs/etc/nginx/nginx.conf
@@ -44,7 +44,9 @@ http {
         }
 
         location /novnc {
-            proxy_pass http://127.0.0.1:5901;
+            proxy_pass http://127.0.0.1:5901/;
+            proxy_redirect default;
+
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
