Add support for certbot --dry-run
Tweaked the final cerbot invocation to refer to a master set of certbot_arguments to reduce duplication - happy to drop that bit if you liked it more how it was.

--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -21,6 +21,7 @@
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
     "challenge": "http",
+    "environment": "production",
     "dns": {}
   },
   "schema": {
@@ -29,6 +30,7 @@
     "certfile": "str",
     "keyfile": "str",
     "challenge": "list(dns|http)",
+    "environment": "list(staging|production)",
     "acme_server": "url?",
     "acme_root_ca_cert": "str?",
     "dns": {
