--- a/check_config/config.json
+++ b/check_config/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Check Home Assistant configuration",
-  "version": "3.4.0",
+  "version": "3.5.0",
   "slug": "check_config",
   "description": "Check current Home Assistant configuration against a new version",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/check_config",
@@ -9,7 +9,7 @@
   "startup": "once",
   "boot": "manual",
   "init": false,
-  "map": ["config", "ssl", "share:rw"],
+  "map": ["config", "ssl", "media:rw", "share:rw"],
   "options": {
     "version": "latest"
   },
