--- a/zwave/Dockerfile
+++ b/zwave/Dockerfile
@@ -39,6 +39,7 @@ RUN \
         curl-dev \
         eudev-dev \
         git \
+        pkgconf-dev \
         openssl-dev \
         qt5-qtbase-dev \
         qt5-qtremoteobjects-dev \
