--- a/ssh/config.json
+++ b/ssh/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Terminal & SSH",
-  "version": "8.8.1",
+  "version": "8.9.0",
   "slug": "ssh",
   "description": "Allow logging in remotely to Home Assistant using SSH",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/ssh",
@@ -8,6 +8,7 @@
   "init": false,
   "advanced": true,
   "startup": "services",
+  "host_dbus": true,
   "ingress": true,
   "panel_icon": "mdi:console",
   "panel_title": "Terminal",
