zwave: fix vnc issues

--- a/zwave/Dockerfile
+++ b/zwave/Dockerfile
@@ -8,6 +8,8 @@ ARG QTMQTT_VERSION
 ARG QTOZW_VERSION
 ARG QTOZWADMIN_VERSION
 ARG QTWEBSOCKETS_VERSION
+ARG NOVNC_VERSION
+ARG WEBSOCKIFY_VERSION
 
 # Install QT Open Z-Wave 
 WORKDIR /usr/src
@@ -25,9 +27,9 @@ RUN \
         qt5-qtsvg \
         rapidjson \
         ttf-freefont \
-    && apk add --no-cache --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing \
-        novnc \
-        websockify \
+        python3 \
+        py3-numpy \
+        net-tools \
     && apk add --no-cache --virtual .build-dependencies \
         binutils \
         build-base \
@@ -82,6 +84,19 @@ RUN \
     && /usr/lib/qt5/bin/qmake -r CONFIG+=release \
     && make -j $(( $(nproc) + 1 )) \
     && make install \
+    \
+    && git clone --depth 1 -b \
+        v${NOVNC_VERSION} https://github.com/novnc/noVNC \
+    && cd noVNC \
+    && mkdir -p /usr/share/noVNC \
+    && rm -rf .git utils \
+    && cp -rf * /usr/share/noVNC/ \
+    \
+    && git clone --depth 1 -b \
+        v${WEBSOCKIFY_VERSION} https://github.com/novnc/websockify \
+    && cd websockify \
+    && python3 setup.py build \
+    && python3 setup.py install --prefix=/usr \
     \
     && mkdir -p /usr/share/OpenZWave \
     && mv /usr/share/qt5/qt-openzwavedatabase.rcc /usr/share/OpenZWave/ \
