SSH: Add git-perl to have git-add--interactive available

--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -20,6 +20,7 @@ RUN \
         alsa-plugins-pulse \
         bluez \
         git \
+        git-perl \
         libuv \
         mosquitto-clients \
         nano \
