--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,6 @@ name: Lint
 
 env:
   HADOLINT_VERSION: v1.17.2
-  SHELLCHECK_VERSION: "0.5.0"
   SHELLCHECK_OPTS: -e SC1008 -s bash
 
 on:
@@ -50,4 +49,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run linter
-        uses: ludeeus/action-shellcheck@${{ env.SHELLCHECK_VERSION }}
+        uses: ludeeus/action-shellcheck@0.5.0
