Fix add-on build

--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -29,8 +29,11 @@ jobs:
       - name: Get add-ons
         id: addons
         run: |
-          addons=$(find ./ -name config.json | cut -d "/" -f2 | sort -u)
-          echo "::set-output name=addons::$addons"
+          declare -a addons
+          for addon in $(find ./ -name config.json | cut -d "/" -f2 | sort -u); do
+            addons+=("$addon");
+          done
+          echo "::set-output name=addons::${addons[@]}"
 
       - name: Get changed add-ons
         id: changed_addons
@@ -47,12 +50,12 @@ jobs:
           done
 
           changed=$(echo ${changed_addons[@]} | rev | cut -c 2- | rev)
-          echo "::set-output name=addons::[$changed]"
-          if [[ ! -z ${changed} ]]; then
-            echo "Changed add-ons: $changed"
-            echo "::set-output name=changed::true"
+          if [[ -n ${changed} ]]; then
+            echo "Changed add-ons: $changed";
+            echo "::set-output name=changed::true";
+            echo "::set-output name=addons::[$changed]";
           else
-            echo "No add-on had any monitored files changed (${{ env.MONITORED_FILES }})"
+            echo "No add-on had any monitored files changed (${{ env.MONITORED_FILES }})";
           fi
 
   build:
@@ -81,7 +84,7 @@ jobs:
            if [[ "${{ steps.info.outputs.architectures }}" =~ ${{ matrix.arch }} ]]; then
               echo "::set-output name=buld_arch::true";
             else
-              echo "${{ matrix.arch }} is not a valid arch for ${{ matrix.addon }}, skipping build"
+              echo "${{ matrix.arch }} is not a valid arch for ${{ matrix.addon }}, skipping build";
            fi
 
       - name: Set build arguments
