--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -43,7 +43,7 @@ jobs:
             if [[ "${{ steps.changed_files.outputs.all }}" =~ $addon ]]; then
               for file in ${{ env.MONITORED_FILES }}; do
                   if [[ "${{ steps.changed_files.outputs.all }}" =~ $addon/$file ]]; then
-                    if [[ "${changed_addons[@]}" != "${addon}" ]]; then
+                    if [[ ! "${changed_addons[@]}" =~ $addon ]]; then
                       changed_addons+=("\"${addon}\",");
                     fi
                   fi
