--- a/configurator/config.json
+++ b/configurator/config.json
@@ -16,12 +16,14 @@
   "options": {
     "dirsfirst": false,
     "enforce_basepath": true,
+    "git": true,
     "ignore_pattern": ["__pycache__", ".cloud", ".storage", "deps"],
     "ssh_keys": []
   },
   "schema": {
     "dirsfirst": "bool",
     "enforce_basepath": "bool",
+    "git": "bool",
     "ignore_pattern": ["str"],
     "ssh_keys": ["str"]
   },
