--- a/zwave/config.json
+++ b/zwave/config.json
@@ -1,6 +1,6 @@
 {
   "name": "OpenZWave",
-  "version": "0.5.2",
+  "version": "0.6.1",
   "slug": "zwave",
   "description": "Control a ZWave network with Home Assistant",
   "arch": ["amd64", "i386", "armhf", "armv7", "aarch64"],
@@ -22,6 +22,7 @@
     "1983/tcp": "ozw-admin port",
     "5900/tcp": "VNC port"
   },
+  "map": ["config:rw"],
   "services": ["mqtt:want"],
   "discovery": ["ozw"],
   "auto_uart": true,
@@ -36,6 +37,8 @@
   "schema": {
     "device": "str",
     "network_key": "password",
+    "config_dir": "str?",
+    "user_dir": "str?",
     "instance": "int(1,)?"
   },
   "image": "homeassistant/{arch}-addon-zwave"
