Add stable shellcheck

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,10 +16,19 @@ RUN \
         dbus \
         network-manager \
         libpulse0 \
-        shellcheck
+        xz-utils
 
 # Install docker
 RUN curl -fsSL https://get.docker.com | sh -
+
+# Install shellcheck
+RUN \
+    curl -fLs \
+        "https://github.com/koalaman/shellcheck/releases/download/stable/shellcheck-stable.linux.x86_64.tar.xz" \
+        | tar -xJ \
+    \
+    && mv -f "./shellcheck-stable/shellcheck" "/usr/bin/shellcheck" \
+    && rm -rf "./shellcheck-stable"
 
 # Generate a machine-id for this container
 RUN rm /etc/machine-id && dbus-uuidgen --ensure=/etc/machine-id
