change log_type to be based on LOGGING

--- a/mosquitto/data/mosquitto.conf
+++ b/mosquitto/data/mosquitto.conf
@@ -6,6 +6,10 @@ user root
 ##
 # logging
 log_dest stdout
+log_type error
+log_type warning
+log_type notice
+log_type information
 
 ##
 # datastore
