--- a/homematic/rootfs/usr/share/tempio/crRFD.conf
+++ b/homematic/rootfs/usr/share/tempio/crRFD.conf
@@ -42,3 +42,7 @@ KeyServer.Gateway.URL=secgtw.homematic.com
 Vertx.WorkerPoolSize=5
 
 # USB HM/IP TRX Adapter Configuration
+{{ range $index, $device := .hmip }}
+Adapter.{{ $index }}.Type={{ $device.type }}
+Adapter.{{ $index }}.Port={{ $device.device }}
+{{ end }}
