--- a/homematic/rootfs/usr/share/tempio/hs485d.conf
+++ b/homematic/rootfs/usr/share/tempio/hs485d.conf
@@ -9,3 +9,11 @@ Device Description Dir = /firmware/hs485types
 Device Files Dir = /data/hs485d
 Firmware Dir = /firmware
 User Firmware Dir = /share/hm-firmware
+
+{{ range $index, $device := .wired }}
+[Interface {{ $index }}]
+Type = HMWLGW
+Serial Number = {{ $device.serial }}
+Encryption Key = {{ $device.key }}
+IP Address = {{ $device.ip }}
+{{ end }}
