--- a/homematic/rootfs/usr/share/tempio/rfd.conf
+++ b/homematic/rootfs/usr/share/tempio/rfd.conf
@@ -12,3 +12,11 @@ Address File = /data/ids
 Firmware Dir = /firmware
 User Firmware Dir = /share/hm-firmware
 Replacemap File = /firmware/rftypes/replaceMap/rfReplaceMap.xml
+
+{{ range $index, $device := .rf }}
+[Interface {{ $index }}]
+Type = CCU2
+ComPortFile = {{ $device.device }} 
+AccessFile = /dev/null
+ResetFile = /sys/class/gpio/gpio18/value
+{{ end }}
