HomeMatic: take container down on ReGaHss

--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         libusb-1.0 \
         lighttpd \
+        lighttpd-mod-openssl \
         nginx \
         openjdk-11-jre-headless \
     && rm -rf /var/lib/apt/lists/*
