HomeMatic: Fix ingress

--- a/homematic/rootfs/etc/nginx/nginx.conf
+++ b/homematic/rootfs/etc/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
 
         location / {
             proxy_pass http://127.0.0.1:80;
-            proxy_redirect ~^/(.+)$ $real_scheme://$http_host%%INGRESS_ENTRY%%/$1;
+            proxy_redirect ~^/(.+)$ $real_scheme://$http_host%%ingress_entry%%/$1;
 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -63,14 +63,14 @@ http {
             sub_filter '/etc/config/' '/etc/config/';
 
             # Make URLs relative 
-            sub_filter '/webui/' '%%INGRESS_ENTRY%%/webui/';
-            sub_filter '/ise/' '%%INGRESS_ENTRY%%/ise/';
-            sub_filter '/pda/' '%%INGRESS_ENTRY%%/pda/';
-            sub_filter '/config/' '%%INGRESS_ENTRY%%/config/';
-            sub_filter '/api/' '%%INGRESS_ENTRY%%/api/';
-            sub_filter '/pages/' '%%INGRESS_ENTRY%%/pages/';
-            sub_filter '/jpages/' '%%INGRESS_ENTRY%%/jpages/';
-            sub_filter '/esp/' '%%INGRESS_ENTRY%%/esp/';
+            sub_filter '/webui/' '%%ingress_entry%%/webui/';
+            sub_filter '/ise/' '%%ingress_entry%%/ise/';
+            sub_filter '/pda/' '%%ingress_entry%%/pda/';
+            sub_filter '/config/' '%%ingress_entry%%/config/';
+            sub_filter '/api/' '%%ingress_entry%%/api/';
+            sub_filter '/pages/' '%%ingress_entry%%/pages/';
+            sub_filter '/jpages/' '%%ingress_entry%%/jpages/';
+            sub_filter '/esp/' '%%ingress_entry%%/esp/';
 
             # Protect iframe breakouts
             sub_filter 'top.window.location.href' 'location.href';
