--- a/homematic/rootfs/usr/share/tempio/crRFD.conf
+++ b/homematic/rootfs/usr/share/tempio/crRFD.conf
@@ -43,6 +43,6 @@ Vertx.WorkerPoolSize=5
 
 # USB HM/IP TRX Adapter Configuration
 {{ range $index, $device := .hmip }}
-Adapter.{{ $index }}.Type={{ $device.type }}
-Adapter.{{ $index }}.Port={{ $device.device }}
+Adapter.{{ if $index eq 0 }}1{{ else }}2{{ end }}.Type={{ $device.type }}
+Adapter.{{ if $index eq 0 }}1{{ else }}2{{ end }}.Port={{ $device.device }}
 {{ end }}
