nginx_proxy: Add a new "listen_parameters" config option
This new config option allows to change the default `listen` arguments
used in nginx configuration. In particular, this allows to use the
`proxy_protocol` to retrieve the end-user IP address (along with a
config file stored into a `customize.default` file).
Default options are not changed by this commit.

--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -45,7 +45,7 @@ http {
         # dhparams file
         ssl_dhparam /data/dhparams.pem;
 
-        listen 443 ssl http2;
+        listen 443 ssl %%LISTEN_PARAMETERS%%;
         %%HSTS%%
         
         # intermediate configuration
