--- a/deconz/config.json
+++ b/deconz/config.json
@@ -30,7 +30,7 @@
   "apparmor": false,
   "privileged": ["SYS_MODULE", "SYS_RAWIO"],
   "devices": ["/dev/bus/usb:/dev/bus/usb:rwm", "/dev/mem:/dev/mem:rw"],
-  "snapshot_exclude": ["/data/otau"],
+  "snapshot_exclude": ["*/otau"],
   "options": {
     "device": null
   },
