HomeMatic: Migrate OCCU back to eq-3

--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -15,14 +15,13 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 ARG OCCU_VERSION
-ARG CCU_VERSION
 ARG BUILD_ARCH
 
 # Install OCCU
 WORKDIR /usr/src
 RUN \
     set -x \
-    && curl -SL https://github.com/jens-maus/occu/archive/${OCCU_VERSION}.tar.gz | tar xzf - \
+    && curl -SL https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz | tar xzf - \
     && cd occu-${OCCU_VERSION} \
     && mkdir -p \
         /boot \
@@ -60,7 +59,12 @@ RUN \
     && sed -i "s|/etc/lighttpd/||" /opt/hm/etc/lighttpd/conf.d/proxy.conf \
     \
     && cd ../ \
+    \
     && cp -r firmware / \
+    && mv /firmware/HmIP-RFUSB/hmip_coprocessor_update.eq3 /firmware/HmIP-RFUSB/hmip_coprocessor_update-2.8.6.eq3 \
+    && sed -i "s/hmip_coprocessor_update.eq3/hmip_coprocessor_update-2.8.6.eq3/" /firmware/HmIP-RFUSB/fwmap \
+    && sed -i "s/2.8.4/2.8.6/" /firmware/HmIP-RFUSB/fwmap \
+    \
     && cp -R HMserver/opt/HmIP/* /opt/HmIP/ \
     && cp -a HMserver/opt/HMServer/*.jar /opt/HMServer/ \
     && cp -R HMserver/opt/HMServer/groups /opt/HMServer/ \
