--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -12,6 +12,7 @@ http {
         ''      close;
     }
     
+    server_tokens off;
     server_names_hash_bucket_size 64;
 	
     #include /data/cloudflare.conf;
