WIP - Add ModSecurity web application firewall to NGINX Home Assistant SSL proxy addon

--- a/nginx_proxy/Dockerfile
+++ b/nginx_proxy/Dockerfile
@@ -1,11 +1,29 @@
 ARG BUILD_FROM
+
+FROM jhampdbre/nginx-116-${BUILD_FROM} as build_modsecurity
+
 FROM $BUILD_FROM
 
 # Setup base
-RUN apk add --no-cache nginx openssl
+RUN apk add --no-cache \
+    curl-dev \
+    libstdc++ \
+    libxml2-dev \
+    lmdb-dev \
+    yajl \
+    nginx \
+    openssl \
+    && mkdir /etc/nginx/modsec
+
+# Copy owasp-modsecurity-crs and modsecurity from the build image
+COPY --from=build_modsecurity /usr/local/modsecurity /usr/local/modsecurity
+COPY --from=build_modsecurity /usr/local/owasp-modsecurity-crs /usr/local/owasp-modsecurity-crs
+COPY --from=build_modsecurity /usr/lib/nginx/modules/ /usr/lib/nginx/modules/
 
 # Copy data
 COPY data/run.sh /
 COPY data/nginx.conf /etc/
+COPY data/modsec/ /etc/nginx/modsec/
+COPY data/owasp/ /usr/local/owasp-modsecurity-crs/
 
 CMD [ "/run.sh" ]
