--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -2,6 +2,9 @@ daemon off;
 error_log stderr;
 pid /var/run/nginx.pid;
 
+# Nginx ModSecurity Connector
+load_module modules/ngx_http_modsecurity_module.so;
+
 events {
 	worker_connections 1024;
 }
@@ -11,11 +14,11 @@ http {
         default upgrade;
         ''      close;
     }
-    
+
     server_names_hash_bucket_size 64;
-	
+
     #include /data/cloudflare.conf;
-	
+
     server {
         server_name _;
         listen 80 default_server;
@@ -47,7 +50,7 @@ http {
 
         listen 443 ssl http2;
         %%HSTS%%
-        
+
         # intermediate configuration
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
@@ -65,6 +68,8 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
+            modsecurity on;
+            modsecurity_rules_file /etc/nginx/modsec/main.conf;
         }
     }
 
