Fix build for adding modsecurity to nginx ssl proxy
- Use home assistant base images to build modsecurity intermediate container
- Move files to build modsecurity intermediate container into subdirectory to make building it easier
- Update Dockerfile to pull build_modsecurity from the newly published modsecurity intermediate images

--- a/nginx_proxy/Dockerfile
+++ b/nginx_proxy/Dockerfile
@@ -1,6 +1,7 @@
 ARG BUILD_FROM
+ARG BUILD_ARCH
 
-FROM jhampdbre/nginx-116-${BUILD_FROM} as build_modsecurity
+FROM jhampdbre/${BUILD_ARCH}-nginx-116-modsecurity as build_modsecurity
 
 FROM $BUILD_FROM
 
