--- a/nginx_proxy/Dockerfile
+++ b/nginx_proxy/Dockerfile
@@ -8,6 +8,8 @@ FROM $BUILD_FROM
 # Setup base
 RUN apk add --no-cache \
     curl-dev \
+    geoip \
+    libmaxminddb-dev \
     libstdc++ \
     libxml2-dev \
     lmdb-dev \
