Add `security_mode` configuration option to nginx addon
- Add `security_mode` config option to enable, disable, or run in
  log-only mode
- Log modsecurity policy violations to stdout so that
  users can tell if anything is intentionally or unintentionally blocked
- Move `modsecurity` directives to `http` block of nginx.conf to allow
  for easier overriding with a custom nginx config file
- Tidy up package installs in Dockerfile

--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -22,7 +22,8 @@
       "active": false,
       "default": "nginx_proxy_default*.conf",
       "servers": "nginx_proxy/*.conf"
-    }
+    },
+    "security_mode": "DetectionOnly"
   },
   "schema": {
     "domain": "str",
@@ -34,7 +35,8 @@
       "active": "bool",
       "default": "str",
       "servers": "str"
-    }
+    },
+    "security_mode": "str"
   },
   "image": "homeassistant/{arch}-addon-nginx_proxy"
 }
