--- a/nginx_proxy/data/modsec/modsecurity.conf
+++ b/nginx_proxy/data/modsec/modsecurity.conf
@@ -4,7 +4,7 @@
 # only to start with, because that minimises the chances of post-installation
 # disruption.
 #
-SecRuleEngine DetectionOnly
+SecRuleEngine %%SECURITY_MODE%%
 
 
 # -- Request body handling ---------------------------------------------------
@@ -218,16 +218,17 @@ SecDataDir /tmp/
 # level response status codes).
 #
 SecAuditEngine RelevantOnly
-SecAuditLogRelevantStatus "^(?:5|4(?!04))"
+# No need to show requests that did not trigger a rule violation
+SecAuditLogRelevantStatus "^$"
 
 # Log everything we know about a transaction.
-SecAuditLogParts ABIJDEFHZ
+SecAuditLogParts ABCEFHJKZ
 
 # Use a single file for logging. This is much easier to look at, but
 # assumes that you will use the audit log only ocassionally.
 #
 SecAuditLogType Serial
-SecAuditLog /var/log/modsec_audit.log
+SecAuditLog /dev/stdout
 
 # Specify the path for concurrent audit logging.
 #SecAuditLogStorageDir /opt/modsecurity/var/audit/
