--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -17,6 +17,10 @@ http {
 
     server_names_hash_bucket_size 64;
 
+    # enable modsecurity
+    modsecurity on;
+    modsecurity_rules_file /etc/nginx/modsec/main.conf;
+
     #include /data/cloudflare.conf;
 
     server {
@@ -68,8 +72,6 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-            modsecurity on;
-            modsecurity_rules_file /etc/nginx/modsec/main.conf;
         }
     }
 
